@@ -22,7 +22,7 @@ requires 'Plack::Component::Tags::HTML' => 0.15;
 requires 'Plack::Session' => 0;
 requires 'Plack::Util::Accessor' => 0;
 requires 'Tags::HTML::Container' => 0;
-requires 'Tags::HTML::Login::Access' => 0.03;
+requires 'Tags::HTML::Login::Access' => 0.04;
 resources 'bugtracker' => 'https://github.com/michal-josef-spacek/Plack-App-Login-Password/issues';
 resources 'homepage' => 'https://github.com/michal-josef-spacek/Plack-App-Login-Password';
 resources 'repository' => 'git://github.com/michal-josef-spacek/Plack-App-Login-Password';
